docs: adjust the docs again